--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,6 +16,6 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: |
-       docker build --file Dockerfile --tag aimingds/my-image-name:$(date +%s) .
+       docker build --file Dockerfile --tag aimingds/my-image-name .
        docker login -u aimingds -p kepoahkamu
-       docker push aimingds/my-image-name:$(date +%s)
+       docker push aimingds/my-image-name
