--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,4 +25,4 @@ jobs:
       run: docker push ${secrets.REGISTRY_URL}/${DOCKER_IMAGE_NAME}:latest
 
     - name: Redeploy
-      run: curl -fku "${{ secrets.RANCHER_TOKEN }}" -X POST -H 'Accept: application/json' -H 'Content-Type: application/json' "${{ secrets.RANCHER_URL }}"
+      run: curl -fku "${{ secrets.RANCHER_TOKEN }}" -X POST -H "Accept:application/json" -H "Content-Type:application/json" "${{ secrets.RANCHER_URL }}"
