--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,7 +16,9 @@ jobs:
     - uses: actions/checkout@v3
     
     - name: Build the Docker image
-      run: docker build -t ${{ secrets.REGISTRY_URL }}/${DOCKER_IMAGE_NAME}:latest .
+      run: |
+        echo ${{ secrets.REGISTRY_URL }}
+        docker build -t ${{ secrets.REGISTRY_URL }}/${DOCKER_IMAGE_NAME}:latest .
 
     - name: Login to Registry
       run: echo "${{ secrets.REGISTRY_PASS }}" | docker login -u "${{ secrets.REGISTRY_USER }}" --password-stdin "${{ secrets.REGISTRY_URL }}"
