--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Build the Docker image
       run: |
         echo "${{ secrets.REGISTRY_URL }}"
-        docker build -t ${{ secrets.REGISTRY_URL }}/${DOCKER_IMAGE_NAME}:latest .
+        docker build --tag "${{ secrets.REGISTRY_URL }}/${DOCKER_IMAGE_NAME}:latest" .
 
     - name: Login to Registry
       run: echo "${{ secrets.REGISTRY_PASS }}" | docker login -u "${{ secrets.REGISTRY_USER }}" --password-stdin "${{ secrets.REGISTRY_URL }}"
