--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,6 +8,7 @@ on:
   
 env:
   DOCKER_IMAGE_NAME: dumbflix-test
+  REGISTRY_URL: ${{ secrets.REGISTRY_URL }}
 
 jobs:
   build:
@@ -17,8 +18,8 @@ jobs:
     
     - name: Build the Docker image
       run: |
-        echo "${{ secrets.REGISTRY_URL }}"
-        docker build --tag "${{ secrets.REGISTRY_URL }}/${DOCKER_IMAGE_NAME}:latest" .
+        echo "${REGISTRY_URL}"
+        docker build --tag "${REGISTRY_URL}/${DOCKER_IMAGE_NAME}:latest" .
 
     - name: Login to Registry
       run: echo "${{ secrets.REGISTRY_PASS }}" | docker login -u "${{ secrets.REGISTRY_USER }}" --password-stdin "${{ secrets.REGISTRY_URL }}"
